# qist-platform

./: .env.example  ADMIN-PERMISSIONS-SUMMARY.md  Cargo.toml  DEPLOYMENT-CHECKLIST.md  jest.config.js  juno.config.mjs  package-lock.json  package.json
docs/: ADMIN-APPROVAL-BUSINESS-IMPACT.md  ADMIN-DUE-DILIGENCE.md  ADMIN-PERMISSIONS-RBAC.md  DASHBOARD-AUDIT.md  ISLAMIC-CONTRACTS-IMPLEMENTATION.md  KYC-SUMMARY.md  PAYMENT-INTEGRATION.md  PHASE-2-IMPLEMENTATION.md  README.md  TEST-SUMMARY.md  design-system.md  impl.md  member-dashboard.md  real-time-dashboard.md  waqf-pool.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: application-timeline.tsx  auth-button.tsx  bulk-operations.tsx  character-count-input.tsx  contract-type-tooltip.tsx  create-opportunity-modal.tsx  data-seeder.tsx  document-card.tsx  document-upload-modal.tsx  internal-notes.tsx  investment-modal.tsx  kyc-alert.tsx  optimized-file-upload.tsx  permission-guard.tsx  quick-stats-widget.tsx  step-indicator.tsx  (+3 more)
trade/: .env.example  IMPLEMENTATION-SUMMARY-MEMBERSHIP-NUMBERS.md  KYC-NOTIFICATIONS-SUMMARY.md  MEMBER-VALIDATIONS-IMPLEMENTATION.md  MEMBERSHIP-NUMBERS-QUICK-REF.md  SMS-WHATSAPP-IMPLEMENTATION-SUMMARY.md  SMS-WHATSAPP-QUICK-REF.md  llm.txt
trade/src/satellite/: Cargo.toml
trade/src/satellite/src/: lib.rs
trade/src/satellite/src/business_financing/: README.md  access_control.rs  financial_data_validation.rs  investment_opportunity_validation.rs  islamic_contract_validation.rs  member_validation.rs  mod.rs  platform_message_validation.rs  revenue_report_validation.rs
(+233 files in other folders)
