[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.20"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
serde = { version = "1.0.225", default-features = false }
serde_cbor = "0.11.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
junobuild-satellite = { version = "0.3.1", default-features = false, features = [
    "on_set_doc",
    "on_set_many_docs", 
    "on_delete_doc",
    "on_delete_many_docs",
    "on_delete_filtered_docs",
    "on_upload_asset",
    "on_delete_asset",
    "on_delete_many_assets",
    "on_delete_filtered_assets",
    "assert_set_doc",
    "assert_delete_doc",
    "assert_upload_asset",
    "assert_delete_asset"
] }
junobuild-macros = "0.1.1"
junobuild-utils = "0.1.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

